--- a/FamilyVideoChat/src/main/res/layout/activity_main.xml
+++ b/FamilyVideoChat/src/main/res/layout/activity_main.xml
@@ -8,17 +8,19 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".ui.activity.MainActivity">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <include layout="@layout/view_toolbar"/>
+        <include android:id="@+id/maintoolbar"
+            layout="@layout/view_toolbar"/>
         <FrameLayout
             android:id="@+id/fl_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_below="@id/maintoolbar"/>
         <include layout="@layout/view_progress"/>
-    </LinearLayout>
+    </RelativeLayout>
    <!-- <include layout="@layout/content_main"/>-->
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation"
