--- a/FamilyVideoChat/src/main/res/layout/fragment_main.xml
+++ b/FamilyVideoChat/src/main/res/layout/fragment_main.xml
@@ -16,6 +16,7 @@
         android:gravity="center"
         android:text="select a person to chat"/>
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_video"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -26,6 +27,7 @@
         card_view:cardCornerRadius="20dp"
         card_view:cardElevation="24dp">
         <ImageView
+            android:id="@+id/iv_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
@@ -33,6 +35,7 @@
             android:src="@drawable/one_key_home"/>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_audio"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -43,6 +46,7 @@
         card_view:cardCornerRadius="20dp"
         card_view:cardElevation="24dp">
         <ImageView
+            android:id="@+id/iv_audio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
@@ -50,6 +54,7 @@
             android:src="@drawable/monitoring"/>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_message"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -60,6 +65,7 @@
         card_view:cardCornerRadius="20dp"
         card_view:cardElevation="24dp">
         <ImageView
+            android:id="@+id/iv_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
