--- a/FamilyVideoChat/src/main/res/values/colors.xml
+++ b/FamilyVideoChat/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#e10e23</color>
     <color name="colorPrimaryDark">#d1143a</color>
     <color name="colorAccent">#e0a63a</color>
+    <color name="colorAccentDark">#9f9f3f</color>
     <color name="grey">#aaa</color>
     <color name="white">#fff</color>
     <color name="touming">#aa3F51B5</color>
