--- a/FamilyVideoChat/src/main/res/layout/activity_login.xml
+++ b/FamilyVideoChat/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.activity.LoginActivity">
+    tools:context=".ui.activity.LoginActivity"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <include layout="@layout/view_toolbar"/>
@@ -18,7 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email"/>
+        android:src="@drawable/r"
+        />
     <include layout="@layout/view_progress"/>
 
 </android.support.design.widget.CoordinatorLayout>
