--- a/FamilyVideoChat/src/main/res/layout/content_login.xml
+++ b/FamilyVideoChat/src/main/res/layout/content_login.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/login"
         android:textStyle="bold"
         android:textSize="30sp"
         android:layout_centerHorizontal="true"/>
@@ -30,7 +30,7 @@
             android:id="@+id/edt_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@android:drawable/ic_input_get"
+            android:drawableLeft="@drawable/user_64"
             android:inputType="text"
             android:hint="username"
            />
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:drawableLeft="@android:drawable/ic_delete"
+            android:drawableLeft="@drawable/password_64"
             android:hint="password"
             />
     </android.support.design.widget.TextInputLayout>
@@ -62,6 +62,8 @@
         android:layout_marginTop="@dimen/edit_margin_vertical"
         android:background="@color/colorAccent"
         style="@style/Base.Widget.AppCompat.Button"
-        android:text="LOGIN"
+        android:text="@string/login"
+        android:textColor="#fff"
+        android:textSize="20sp"
         android:layout_centerHorizontal="true"/>
 </RelativeLayout>
