--- a/FamilyVideoChat/src/main/res/layout/user_item.xml
+++ b/FamilyVideoChat/src/main/res/layout/user_item.xml
@@ -4,7 +4,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/tv_friend"
+        android:id="@+id/tv_user"
         android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"/>
     <Button
-        android:id="@+id/btn_edit"
+        android:id="@+id/btn_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -25,7 +25,7 @@
         android:layout_margin="10dp"
         android:elevation="5dp"
         style="@style/Base.TextAppearance.AppCompat.Widget.Button"
-        android:text="change"
+        android:text="添加"
         />
 
 </RelativeLayout>
